--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,9 +2,9 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to MyBank loans related production APIs "
+  message: "Welcome to Bank loans related production APIs "
   contactDetails:
-    name: "Pelias Sudhir - Product Owner"
+    name: "Amit LAd - Product Owner"
     email: "pelias@eazybank.com"
   onCallSupport:
     - (723) 656-8709
